{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 342,
  "lineage": "0354fe42-f8a3-757d-4432-40154e55886f",
  "resources": [
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkin",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07315f74f3fa6a5a3",
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:instance/i-010c1909186bc987a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010c1909186bc987a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-sg-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-026c4e92ac76f685a",
            "private_dns": "ip-10-0-44-200.ap-southeast-1.compute.internal",
            "private_ip": "10.0.44.200",
            "public_dns": "ec2-54-254-60-174.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.60.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2119bcca4be1c3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ea946af8193f8fb",
            "tags": {
              "Name": "Jenkin 0"
            },
            "tags_all": {
              "Name": "Jenkin 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a66ca9c789305556"
            ]
          },
          "dependencies": [
            "module.VPC-Jenkin.aws_security_group.allow_ssh",
            "module.VPC-Jenkin.aws_subnet.public_1",
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07315f74f3fa6a5a3",
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:instance/i-0d109743d52928390",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d109743d52928390",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-sg-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0800a729f95806c07",
            "private_dns": "ip-10-0-174-62.ap-southeast-1.compute.internal",
            "private_ip": "10.0.174.62",
            "public_dns": "ec2-13-250-49-149.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.49.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069ad969faccd9560",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ea946af8193f8fb",
            "tags": {
              "Name": "Jenkin 1"
            },
            "tags_all": {
              "Name": "Jenkin 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a66ca9c789305556"
            ]
          },
          "dependencies": [
            "module.VPC-Jenkin.aws_security_group.allow_ssh",
            "module.VPC-Jenkin.aws_subnet.public_1",
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:internet-gateway/igw-0aed6337a73094106",
            "id": "igw-0aed6337a73094106",
            "owner_id": "921567337599",
            "tags": {
              "Name": "internet-gateway-Jenkin"
            },
            "tags_all": {
              "Name": "internet-gateway-Jenkin"
            },
            "vpc_id": "vpc-00cc0136a33bd986a"
          },
          "dependencies": [
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:route-table/rtb-003642a543d8afec8",
            "id": "rtb-003642a543d8afec8",
            "owner_id": "921567337599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aed6337a73094106",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-Jenkin"
            },
            "tags_all": {
              "Name": "public-route-table-Jenkin"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cc0136a33bd986a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-Jenkin.aws_internet_gateway.gw",
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953a165561bb53cc",
            "route_table_id": "rtb-003642a543d8afec8",
            "subnet_id": "subnet-00ea946af8193f8fb"
          },
          "dependencies": [
            "module.VPC-Jenkin.aws_internet_gateway.gw",
            "module.VPC-Jenkin.aws_route_table.route-public",
            "module.VPC-Jenkin.aws_subnet.public_1",
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:security-group/sg-0a66ca9c789305556",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a66ca9c789305556",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "921567337599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cc0136a33bd986a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:subnet/subnet-00ea946af8193f8fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ea946af8193f8fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "921567337599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1-demo"
            },
            "tags_all": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-00cc0136a33bd986a"
          },
          "dependencies": [
            "module.VPC-Jenkin.aws_vpc.vpc_jenkin"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Jenkin",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_jenkin",
      "provider": "module.VPC-Jenkin.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921567337599:vpc/vpc-00cc0136a33bd986a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0504ba16c5e25cb49",
            "default_route_table_id": "rtb-0eb094aafdcb5f8e7",
            "default_security_group_id": "sg-050a4f246c6b09266",
            "dhcp_options_id": "dopt-0dd8aef668ac15008",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00cc0136a33bd986a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb094aafdcb5f8e7",
            "owner_id": "921567337599",
            "tags": {
              "Name": "Vpc-Jenkins"
            },
            "tags_all": {
              "Name": "Vpc-Jenkins"
            }
          }
        }
      ]
    }
  ]
}